Tests halfway done. Need to add more tests and behavior after